# GoatPlatform

./: .gcloudignore  .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  pipeline.py
backend/app/services/: __init__.py  script_generator.py  thumbnail_generator.py  video_assembly.py  video_generator.py  voice_generator.py  youtube_upload.py
docs/: ARCHITECTURE_WHY_FRONTEND_AND_BACKEND.md  FRONTEND_HOSTING_GCP.md  HOW_FRONTEND_WORKS.md  LEGAL_AND_COMPLIANCE.md  WHAT_BUILD_AND_NPM_RUN_MEAN.md
frontend/: .env.example  .firebaserc  Dockerfile  cloudbuild.yaml  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
